Inogres historic access limit when an app reads its own data
This CL makes HC ignores historic access limit when an app reads its own data for:
- readRecords (by both filters and IDs)
- aggregateRecords

For `getChangeLogs`, we don't foresee any apps wanting to read its own
change log, so we'll keep historic access limit applying for
`getChangeLogs` for now.

This CL also changes the way `readRecords` by filter filters data
point's time from [inclusive, inclusive] to [inclusive, exclusive) which
is more inline with what the APK is doing and more correct in general.

Fix: 272437932
Test: atest "CtsHealthFitnessDeviceTestCases:android.healthconnect.cts.HistoricAccessLimitTest"
Change-Id: Ifc847b196b56c068f684824cc7a0d1f6abfe1c3a